@@ -12,7 +12,7 @@ installdirs:                site
 requires:
   perl:                     5.006
   Image::Size:              0
-  Labyrinth:                5.10
+  Labyrinth:                5.14
   Labyrinth::Plugin::Hits:  5.09
 recommends:
   Test::CPAN::Meta:         0
