@@ -16,12 +16,12 @@ WriteMakefile(
 
         # prereqs
         'Image::Size'               => '0',
-        'Labyrinth'                 => '5.10',
+        'Labyrinth'                 => '5.14',
         'Labyrinth::Plugin::Hits'   => '5.09',
 
         # build/test prereqs
-        'Test::More'                => '0.70',
-        'IO::File'                  => '0'
+        'IO::File'                  => '0',
+        'Test::More'                => '0.70'
 
     }
 );
